cicd/manifests/apps/flux/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux
  namespace: flux-system
spec:
  ingressClassName: traefik
  rules:
    - host: flux.prod.server.home
      http:
        paths:
          - backend:
              service:
                name: capacitor
                port:
                  number: 9000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - flux.prod.server.home
      secretName: flux-tls-secret
